--- a/src/app/form-grid/form-grid.component.html
+++ b/src/app/form-grid/form-grid.component.html
@@ -33,7 +33,7 @@
   </div>
   <div class="ui-g">
    <div class="ui-g-12">
-     <button pButton type="button" label="Save" (click)="getNewEmployee()" ></button>
+     <button pButton type="button" label="Save" (click)="savingData($event)"" ></button>
    </div>
    </div>
 </form>
